--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -26,6 +26,11 @@
 		--silverBox-cancel-bg-color: #fff;
 		--silverBox-cancel-border-color: #d0d5dd;
 		--silverBox-cancel-hover-color: #d2d2d2;
+		// custom button
+		--silverBox-custom-color: #475467;
+		--silverBox-custom-bg-color: #fff;
+		--silverBox-custom-border-color: #d0d5dd;
+		--silverBox-custom-hover-color: #d2d2d2;
 		// inputs
 		--silverBox-input-border-color: #d0d5dd;
 		--silverBox-input-background: #fff;
@@ -77,6 +82,11 @@
 		--silverBox-cancel-bg-color: #5f5f5f;
 		--silverBox-cancel-border-color: #5f5f5f;
 		--silverBox-cancel-hover-color: #838383;
+		// custom button
+		--silverBox-custom-color: #fff;
+		--silverBox-custom-bg-color: #5f5f5f;
+		--silverBox-custom-border-color: #5f5f5f;
+		--silverBox-custom-hover-color: #838383;
 		// inputs
 		--silverBox-input-border-color: #39363f;
 		--silverBox-input-background: #515864;
