fix(style/inputs): fix silverBox/input box shadows being the same

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -38,6 +38,7 @@
 		--silverBox-input-placeHolder-color: #475467;
 		--silverBox-label-color: #1d2939;
 		--silverBox-hint-color: #101828;
+		--silverBox-input-box-shadow: 0px 0px 4px rgba(201, 14, 14, 0.1);
 		// footer
 		--silverBox-hr-line-color: #bbbbbb;
 		--silverBox-footer-color: #474747;
@@ -94,6 +95,7 @@
 		--silverBox-input-placeHolder-color: #a1a4a9;
 		--silverBox-label-color: #fff;
 		--silverBox-hint-color: #fff;
+		--silverBox-input-box-shadow: 0px 0px 4px rgba(90, 206, 23, 0.1);
 		// footer
 		--silverBox-hr-line-color: #bbbbbb;
 		--silverBox-footer-color: #a1a4a9;
