--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -1,61 +1,55 @@
- .silverBox-input-container {
-     margin-top: var(--silverBox-items-top-margin);
-     display: flex;
-     flex-wrap: var(--silverBox-input-container-flex-wrap);
-     gap: var(--silverBox-input-parent-gap);
-     justify-content: var(--silverBox-input-parent-justify-content);
-     align-items: var(--silverBox-input-parent-align-items);
+.silverBox-input-container {
+	margin-top: var(--silverBox-items-top-margin);
+	display: flex;
+	flex-wrap: var(--silverBox-input-container-flex-wrap);
+	gap: var(--silverBox-input-parent-gap);
+	justify-content: var(--silverBox-input-parent-justify-content);
+	align-items: var(--silverBox-input-parent-align-items);
 
+	.silverBox-input-wrapper {
+		width: var(--silverBox-input-wrapper-width);
+		display: inline-flex;
+		flex-direction: var(--silverBox-input-flex-direction);
+		gap: var(--silverBox-inside-input-gap);
+		text-align: var(--silverBox-input-text-align);
 
-     .silverBox-input-wrapper {
-        width: var(--silverBox-input-wrapper-width);
-         display: inline-flex;
-         flex-direction: var(--silverBox-input-flex-direction);
-         gap: var(--silverBox-inside-input-gap);
-         text-align: var(--silverBox-input-text-align);
+		.silverBox-select {
+			width: var(--silverBox-select-input-width);
+			padding: var(--silverBox-input-select-padding);
+			border-radius: var(--silverBox-input-select-border-radius);
+		}
 
-         .silverBox-select {
-             width: var(--silverBox-select-input-width);
-             padding: var(--silverBox-input-select-padding);
-             border-radius: var(--silverBox-input-select-border-radius);
+		& > input,
+		& > textarea {
+			background: var(--silverBox-input-background);
+			outline: none;
+			border: var(--silverBox-input-border);
+			color: var(--silverBox-input-color);
+			padding: var(--silverBox-input-padding);
+			border-radius: var(--silverBox-input-border-radius);
+			resize: none;
+			font-size: var(--silverBox-input-font-size);
+			box-shadow: var(--silverBox-input-box-shadow);
+			font-weight: var(--silverBox-input-font-weight);
+			width: var(--silverBox-input-width);
 
-         }
+			&::placeholder {
+				color: var(--silverBox-input-placeHolder-color);
+				font-size: var(--silverBox-placeHolder-fontSize);
+				font-weight: var(--silverBox-input-placeHolder-font-weight);
+			}
+		}
 
-         &>input,
-         &>textarea {
-             background: var(--silverBox-input-background);
-             outline: none;
-             border: var(--silverBox-input-border);
-             color: var(--silverBox-input-color);
-             padding: var(--silverBox-input-padding);
-             border-radius: var(--silverBox-input-border-radius);
-             resize: none;
-             font-size: var(--silverBox-input-font-size);
-             box-shadow: var(--silverBox-box-shadow);
-             font-weight: var(--silverBox-input-font-weight);
-             width: var(--silverBox-input-width);
+		label {
+			color: var(--silverBox-label-color);
+			font-size: var(--silverBox-input-label-font-size);
+			font-weight: var(--silverBox-input-label-font-weight);
+		}
 
-
-             &::placeholder {
-                 color: var(--silverBox-input-placeHolder-color);
-                 font-size: var(--silverBox-placeHolder-fontSize);
-                 font-weight: var(--silverBox-input-placeHolder-font-weight);
-             }
-         }
-
-
-         label {
-             color: var(--silverBox-label-color);
-             font-size: var(--silverBox-input-label-font-size);
-             font-weight: var(--silverBox-input-label-font-weight);
-         }
-
-         .silverBox-input-hint {
-             color: var(--silverBox-hint-color);
-             font-size: var(--silverBox-hint-fontSize);
-             font-weight: var(--silverBox-hint-font-weight);
-         }
-
-
-     }
- }
+		.silverBox-input-hint {
+			color: var(--silverBox-hint-color);
+			font-size: var(--silverBox-hint-fontSize);
+			font-weight: var(--silverBox-hint-font-weight);
+		}
+	}
+}
