fix(silverBoxReset): fix silverBox reset not applying on element

--- a/public/src/css/modules/_silverBoxReset.scss
+++ b/public/src/css/modules/_silverBoxReset.scss
@@ -1,6 +1,7 @@
 // css reset
 .silverBox-container,
-.silverBox-container * {
+.silverBox-container *,
+.silverBox * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
