feat(silverBox.scss): Add z-index  to silverBox-overlay.
silverBox-overlay is now always under alert modals.

--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -31,6 +31,7 @@ body {
 		left: 0;
 		justify-content: center;
 		background-color: var(--silverBox-overlay-background);
+		z-index: calc(var(--silverBox-z-index) - 1);
 	}
 
 	.silverBox {
